# chronnotate

./: .flake8  .gitignore  LICENSE.txt  README.md  chronnotate.py  chronnotate_main_window.py  elements.py  gui_resources.py  pyproject.toml  settings.py  tmp.py  utils.py
src/: app.py  chronnotate.py  chronnotate_main_window.py
src/chronnotate/: chronnotate.py  chronnotate_main_window.py  data_utils.py  elements.py  file_dialogs.py  settings.py
ui/: chronnotate.qrc  chronnotate_main_window.ui
