[project]
name = "chronnotate"
description = "Tool for annotating time-series data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["tool", "annotations", "data"]
authors = [
    {name = "Bojan Sofronievski", email = "bojan.drago@gmail.com" }
]
maintainers = [
    {name = "Bojan Sofronievski", email = "bojan.drago@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "PyQt6==6.4.2",
    "PyQt6_sip==13.6.0",
    "pyqtgraph==0.13.3"
]

[project.optional-dependencies]
gui = [
    "pyqt6-tools==6.4.2.3.3"
]
linting = [
    "flake8==7.0.0"
]
formatting = [
    "black==24.1.1",
    "isort==5.13.2"
]
dev = ["chronnotate[gui, linting, formatting]"]

[project.scripts]
chronnotate = "chronnotate:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"